--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ DB_PORT=3306
 DB_DATABASE=julia
 DB_USERNAME=root
 DB_PASSWORD=Iloveyoulord1
-
+WIT_TOKEN="YTQSHLZ3RNXGZR3R7W5FMH35UJVUBSYQ"
 MESSAGEFROM=""
 
 EMAIL_USER =""
