--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "cryptr": "^6.0.3",
     "date-and-time": "^2.3.1",
     "dotenv": "^16.0.1",
@@ -33,6 +34,7 @@
     "knex": "^2.1.0",
     "lodash": "^4.17.21",
     "mysql": "^2.18.1",
+    "node-wit": "^6.2.2",
     "nodemailer": "^6.7.5",
     "objection": "^3.0.1",
     "sharp": "^0.30.6",
@@ -41,9 +43,11 @@
   "devDependencies": {
     "@babel/register": "^7.17.7",
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.41",
+    "@types/node-wit": "^6.0.1",
     "@types/nodemailer": "^6.4.4",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
     "@typescript-eslint/parser": "^5.27.1",
