--- a/.env
+++ b/.env
@@ -4,9 +4,11 @@ DB_HOST="localhost"
 DB_PORT=3306
 DB_DATABASE=julia
 DB_USERNAME=root
-DB_PASSWORD=Iloveyoulord1
-WIT_TOKEN="YTQSHLZ3RNXGZR3R7W5FMH35UJVUBSYQ"
+DB_PASSWORD=oloruntoba99
+WIT_TOKEN="EN75VUTE6ADMCD6GB4IDG7HXAWRPRKMV"
 MESSAGEFROM=""
+
+BOT=1
 
 EMAIL_USER =""
 EMAIL_PASS=""
